<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@mipmap/ic_app_foreground" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/checkboxRememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:text="@string/remember_me"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimaryDark"
            android:padding="12dp"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>
